[tool.poetry]
name = "decisionpy"
version = "0.1.0"
description = "Decision Making Python Package"
authors = ["scuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pydantic = "^1.8.2"
scipy = "1.6.1"
rich = "^10.2.0"

[tool.poetry.dev-dependencies]
notebook = "^6.3.0"
mkdocs-material = "^7.1.4"
mkdocstrings = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
